@@ -4,7 +4,7 @@ Home page of code is: http://smartmontools.sourceforge.net
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
-$Id: TODO,v 1.21 2002/11/07 21:51:34 ballen4705 Exp $
+$Id: TODO,v 1.22 2002/11/13 10:04:12 ballen4705 Exp $
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
@@ -58,16 +58,12 @@ should probably be the default option if there is no configuration
 file.
 
 Add following config file directives:
-  -m  USER@ADDRESS      send email to user if critical problems found
   -f                    enable autosave of attributes
   -o                    enable automatic offline testing
 
 Use daemon (8) function instead of do-it-yourself daemon_init().  But,
 does it close all open file descriptors?  Must read glibc code to see:
 documentation unclear.
-
-Automatically generate smartd.conf.5 man page by extraction of source
-from smartd.8 man page, or simply split them up.
 
 
 General Fixes
