@@ -1,6 +1,6 @@
 \# Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 \# 
-\# $Id: smartd.8,v 1.26 2002/11/12 21:16:25 ballen4705 Exp $
+\# $Id: smartd.8,v 1.27 2002/11/13 10:04:13 ballen4705 Exp $
 \#
 \# This program is free software; you can redistribute it and/or modify it
 \# under the terms of the GNU General Public License as published by the Free
@@ -16,7 +16,7 @@
 \# Research Center), Jack Baskin School of Engineering, University of
 \# California, Santa Cruz. http://ssrc.soe.ucsc.edu/
 \#
-.TH SMARTD 8  "$Date: 2002/11/12 21:16:25 $" "smartmontools-5.0"
+.TH SMARTD 8  "$Date: 2002/11/13 10:04:13 $" "smartmontools-5.0"
 .SH NAME
 smartd \- S.M.A.R.T. Daemon
 .SH SYNOPSIS
@@ -204,7 +204,7 @@ Section below!
 .nf
 .B # First ATA disk on each of two interfaces:
 .B #
-.B \ \ /dev/hda -a  
+.B \ \ /dev/hda -a -M admin@yoyodyne.com,root@localhost 
 .B \ \ /dev/hdc -a -I 194 -I 5 -i 12
 .B #
 .nf
@@ -251,8 +251,8 @@ configuration file. Note that
 .B these are NOT command-line options for 
 .B smartd.
 The Directives below may appear in any order,
-following the device name.  For the moment, apart from the '\-S'
-Directive, these Directives only apply to ATA disks. 
+following the device name.  For the moment, apart from the '\-S' and '\-M'
+Directives, these Directives only apply to ATA disks. 
 .B  For ATA disks, if
 .B no Directives appear, the disk will not be monitored.
 The '\-a' Directive will try to monitor everything possible.
@@ -540,4 +540,4 @@ Please let us know if there is an on\-line source for this document.
 
 .SH
 CVS ID OF THIS PAGE:
-$Id: smartd.8,v 1.26 2002/11/12 21:16:25 ballen4705 Exp $
+$Id: smartd.8,v 1.27 2002/11/13 10:04:13 ballen4705 Exp $
