@@ -31,23 +31,24 @@ DEVICESCAN
 
 
 # HERE IS A LIST OF DIRECTIVES FOR THIS CONFIGURATION FILE
-#   -A    Device is an ATA device
-#   -S    Device is a SCSI device
-#   -C N  Check disks every N seconds.  N must be 10 or greater
-#   -P    Ignore lack of SMART (for disks before ATA-3 Rev 4)
-#   -c    Monitor SMART Health Status
-#   -l    Monitor SMART Error Log for changes
-#   -L    Monitor SMART Self-Test Log for new errors
-#   -f    Monitor for failure of any 'Usage' Attributes
-#   -p    Report changes in 'Prefailure' Attributes
-#   -u    Report changes in 'Usage' Attributes
-#   -t    Equivalent to -p and -u Directives
-#   -i ID Ignore Attribute ID for -f Directive
-#   -I ID Ignore Attribute ID for -p, -u or -t Directive
-#    #    Comment: text after a hash sign is ignored
-#    \    Line continuation character
+#   -A      Device is an ATA device
+#   -S      Device is a SCSI device
+#   -C N    Check disks every N seconds.  N must be 10 or greater
+#   -P      Ignore lack of SMART (for disks before ATA-3 Rev 4)
+#   -c      Monitor SMART Health Status
+#   -l      Monitor SMART Error Log for changes
+#   -L      Monitor SMART Self-Test Log for new errors
+#   -f      Monitor for failure of any 'Usage' Attributes
+#   -M ADD  Send warning email to ADD for -c, -l, -L, and -f
+#   -p      Report changes in 'Prefailure' Attributes
+#   -u      Report changes in 'Usage' Attributes
+#   -t      Equivalent to -p and -u Directives
+#   -i ID   Ignore Attribute ID for -f Directive
+#   -I ID   Ignore Attribute ID for -p, -u or -t Directive
+#    #      Comment: text after a hash sign is ignored
+#    \      Line continuation character
 # Attribute ID is a decimal integer 1 <= ID <= 255
-# All but -S directive are only implemented for ATA devices
+# All but -S and -M directives are only implemented for ATA devices
 #
 # If the test string DEVICESCAN is the first uncommented text
 # then smartd will scan for devices /dev/hd[a-l] and /dev/sd[a-z]
